-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14
-
None
-
Tested on macOS 10.14
-
-
e51341cf20447c42a62281e633513837058f62e5
Qt WebGL QPA plugin stopped working since RHI support landed, specifically the following commit. https://codereview.qt-project.org/c/qt/qtdeclarative/+/259447
How to reproduce:
1) set environment variable QT_QPA_PLATFORM=webgl
2) Start qtbase/bin/qmlscene qt_source/qtwebglplugin/tests/plugins/platforms/webgl/basic_scene.qml
3) Open browser supporting webgl and point to 127.0.0.1:8080 (I used Chrome)
4) Observe endless loading spinner animation.
More details in the WIP commit I will push
| For Gerrit Dashboard: QTBUG-76993 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 267550,1 | WIP: Try to fix plugin after RHI changes in qtdeclarative | dev | qt/qtwebglplugin | Status: DEFERRED | -2 | 0 |
| 268610,4 | Handle offscreen surfaces | dev | qt/qtwebglplugin | Status: MERGED | +2 | 0 |