Handle offscreen surfaces

Implement createPlatformOffscreenSurface(). This way a QOffscreenSurface
will not lead to creating a QWindow. Fairly dummy, and may need amending
later, but fixes the immediate problem with the - still default - direct
OpenGL code path of Qt Quick.

Task-number: QTBUG-76993
Change-Id: Ia4198163fc91d3f353d0067a2a807ec075168ace
Reviewed-by: Jesus Fernandez <Jesus.Fernandez@qt.io>